--- a/frontend-client/src/component/Quantity/style.scss
+++ b/frontend-client/src/component/Quantity/style.scss
@@ -1,44 +1,26 @@
 @use "sass:map";
 @import "styles/pages/all";
 
-.quantity-container{
+.quantity-container {
     color: map.get($theme-colors, "normal-text");
     display: flex;
     gap: 20px;
+    position: relative;
 
-    .quantity{
-        display: flex;
-        align-items: center;
-
-        span{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-        }
-        .qtybtn, input{
-            width: 40px;
-            height: 52px;
-            background: #f5f5f5;
-        }
-        input{
-            border: unset;
-            border-radius: 0;
-
-            &::-webkit-outer-spin-button,
-            &::-webkit-inner-spin-button{
-                -webkit-appearance: none;
-                margin: 0;
-            }
-        }
-    }
-    
-    .button-submit{
+    button {
+        width: 120px;
+        height: 45px;
+        background: map.get($theme-colors, "main");
+        border: none;
+        border-radius: 5px;
+        font-weight: 600;
         cursor: pointer;
+        font-size: 15px;
         transition: all 0.3s;
-        &:hover{
-            background: map.get($theme-colors, "main");
-            color: black;
+
+        &:hover {
+            background: #2d83bc;
+            color: rgb(236, 226, 206);
         }
     }
 }
