--- a/frontend-client/src/styles/pages/all.scss
+++ b/frontend-client/src/styles/pages/all.scss
@@ -2,6 +2,7 @@
 @import "theme";
 @import "responsive";
 @import "@fontsource/be-vietnam-pro";
+
 html,
 body{
     margin: 0;
@@ -19,6 +20,25 @@ body{
     padding-right: 15px;
     margin: auto;
 }
+.section-title  {
+    margin-bottom: 50px;
+    text-align: center;
+
+    h2{
+        position: relative;
+    }
+    h2:after{
+        position: absolute;
+        left: 0;
+        bottom: -15px;
+        right: 0;
+        height: 4px;
+        width: 80px;
+        background: map.get($theme-colors, "main");
+        content: "";
+        margin: 0 auto; 
+    }
+}
 .row{
     display: flex;
     flex-wrap: wrap;
@@ -30,6 +50,10 @@ body{
 .col-lg-3{
     flex: 0 0 25%;
     max-width: 25%;
+}
+.col-lg-4{
+    flex: 0 0 33.33333%;
+    max-width: 33.33333%;
 }
 .col-lg-6{
     flex: 0 0 50%;
