--- a/frontend-client/frontend-client/src/pages/user/bookListProductPage/style.scss
+++ b/frontend-client/frontend-client/src/pages/user/bookListProductPage/style.scss
@@ -2,7 +2,7 @@
 @import "styles/pages/theme";
 
 .container {
-    padding: 30px 0;
+    // padding: 30px 0;
 
     .sidebar {
         padding-right: 20px;
