--- a/frontend-client/frontend-client/src/pages/user/loginPage/style.scss
+++ b/frontend-client/frontend-client/src/pages/user/loginPage/style.scss
@@ -11,7 +11,7 @@
     left: -100px;
 
     .login-container {
-        background: #763b3b;
+        background: #ffffff;
         display: flex;
         width: 750px;
         max-width: 100%;
@@ -57,6 +57,7 @@
         flex-direction: column;
         gap: 15px;
         width: 100%;
+
 
         .login-form-group {
             display: flex;
