--- a/frontend-client/frontend-client/src/pages/user/registerPage/style.scss
+++ b/frontend-client/frontend-client/src/pages/user/registerPage/style.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
-@import "styles/pages/all";
+@import "../../../styles/pages/all";
 
-.login {
+.register {
     min-height: 85vh;
     display: flex;
     align-items: center;
@@ -10,7 +10,7 @@
     top: 0;
     left: -100px;
 
-    .login-container {
+    .register-container {
         background: #ffffff;
         display: flex;
         width: 750px;
@@ -21,7 +21,7 @@
         
     }
 
-    .login-left {
+    .register-left {
         width: 40%;
         background: #f5f5f5;
         display: flex;
@@ -37,14 +37,14 @@
         margin-bottom: 10px;
     }
 
-    .login-title {
+    .register-title {
         font-weight: 600;
         color: map.get($theme-colors, "normal-text");
         margin-top: 10px;
         font-size: 18px;
     }
 
-    .login-right {
+    .register-right {
         width: 60%;
         padding: 40px;
         display: flex;
@@ -52,13 +52,14 @@
         justify-content: center;
     }
 
-    .login-form {
+    .register-form {
         display: flex;
         flex-direction: column;
         gap: 15px;
         width: 100%;
 
-        .login-form-group {
+
+        .register-form-group {
             display: flex;
             flex-direction: column;
             gap: 6px;
@@ -70,16 +71,15 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             font-size: 14px;
-            color: map.get($theme-colors, "normal-text");
             transition: border-color 0.3s;
 
             &:focus {
-                border-color: map.get($theme-colors, "normal-text");
+                border-color: map.get($theme-colors, "primary");
                 outline: none;
             }
         }
 
-        .login-button {
+        .register-button {
             height: 44px;
             font-size: 14px;
             font-weight: 600;
@@ -96,7 +96,7 @@
         }
     }
 
-    .login-label {
+    .register-label {
         font-size: 14px;
         font-weight: 500;
         color: map.get($theme-colors, "normal-text");
@@ -104,17 +104,17 @@
 }
 
 @include Responsive($TABLET_DEVICE) {
-    .login-container {
+    .register-container {
         flex-direction: column;
         width: 90%;
     }
 
-    .login-left {
+    .register-left {
         width: 100%;
         padding: 30px;
     }
 
-    .login-right {
+    .register-right {
         width: 100%;
         padding: 30px;
     }
