--- a/frontend-client/frontend-client/src/pages/user/theme/breadCrumb/style.scss
+++ b/frontend-client/frontend-client/src/pages/user/theme/breadCrumb/style.scss
@@ -7,6 +7,7 @@
     padding: 45px 0px 40px;
     justify-content: center;
     line-height: 30px;
+    margin-top: 100px;
     text-align: center;
     background: map.get($theme-colors, "main");
 
