--- a/frontend-client/frontend-client/src/pages/user/theme/header/header.scss
+++ b/frontend-client/frontend-client/src/pages/user/theme/header/header.scss
@@ -25,7 +25,7 @@
 
         svg {
             font-size: 30px;
-            color: #a4a3a3;
+            color: #262626;
         }
     }
 
@@ -231,7 +231,7 @@
 
         svg {
             font-size: 30px;
-            color: #a4a3a3;
+            color: #262626;
         }
     }
 
