--- a/frontend-client/frontend-client/src/pages/user/theme/breadCrumb/bread.scss
+++ b/frontend-client/frontend-client/src/pages/user/theme/breadCrumb/bread.scss
@@ -3,7 +3,7 @@
 
 .breadCrumb {
     padding: 10px 0;
-    font-size: 14px;
+    font-size: 16px;
 
     .breadCrumb_text {
 
@@ -13,19 +13,15 @@
                 list-style: none;
                 padding: 0;
                 margin: 0;
-                gap: 5px;
 
                 li {
                     color: #333;
-                    font-weight: 400;
+                    font-weight: 500;
 
                     a {
                         text-decoration: none;
-                        color: #333;
-
-                        &:hover {
-                            color: #007bff;
-                        }
+                        font-weight: 800;
+                        color: map.get($theme-colors, "main");
                     }
 
                     &::after {
